--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -21,8 +21,13 @@
     <body>
         <header class="page-header">
             <div class="container">
+                {% if user.is_authenticated %}
+                <a href="{% url 'post_new' %}" class="top-menu">
+                    {% include "./icons/file-earmark-plus.svg" %}
+                </a>
+                {% endif %}
                 <h1>
-                    <a href="/">Eun's Blog</a>
+                    <a href="{% url 'post_list' %}">Eun's Blog</a>
                 </h1>
             </div>
         </header>
